fix(xmonad): using tmux's spawn_session.sh when starting bc scratchpad so that bc starts automatically

--- a/xorg/xmonad/xmonad.hs.in
+++ b/xorg/xmonad/xmonad.hs.in
@@ -121,7 +121,7 @@ scratchpads = [
                                      ),
     NS MIXER_CMD ("~/.xmonad/terminal.sh scratchmixer " ++ MIXER_CMD)
         (resource =? "scratchmixer") (terminalFloating 0.15 0 0.7 0.3),
-    NS "bc"        "~/.xmonad/terminal.sh bc tmux new-session -A -s bc"
+    NS "bc"        "~/.xmonad/terminal.sh bc tmux new-session -A -s bc ~/.tmux/bin/spawn_shell.sh bc"
         (resource =? "bc")           (terminalFloating 0.7 0.2 0.3 0.6),
     NS "notepad"   "~/.xmonad/terminal.sh notepad ~/.xmonad/notepad.sh"
         (resource =? "notepad")      (terminalFloating 0.3 0.2 0.4 0.6)]
