feat(x11): enabled picom + removed scratch terminal borders

--- a/xorg/xmonad/xmonad.hs.in
+++ b/xorg/xmonad/xmonad.hs.in
@@ -117,17 +117,17 @@ myLogHook pipe = dynamicLogWithPP $ dzenPP {
 
 scratchpads = [
     NS "scratchpad"     "~/.xmonad/terminal.sh scratchpad tmux new-session -A -s scratch"
-        (resource =? "scratchpad")   (do
-                                          hasBorder False
-                                          terminalFloating 0 0.5 1 0.5
-                                     ),
+        (resource =? "scratchpad")   (terminalFloating 0 0.5 1 0.5),
     NS MIXER_CMD ("~/.xmonad/terminal.sh scratchmixer " ++ MIXER_CMD)
         (resource =? "scratchmixer") (terminalFloating 0.15 0 0.7 0.3),
     NS "bc"        "~/.xmonad/terminal.sh bc tmux new-session -A -s bc ~/.tmux/bin/spawn_shell.sh bc"
         (resource =? "bc")           (terminalFloating 0.7 0.2 0.3 0.6),
     NS "notepad"   "~/.xmonad/terminal.sh notepad ~/.xmonad/notepad.sh"
         (resource =? "notepad")      (terminalFloating 0.3 0.2 0.4 0.6)]
-    where terminalFloating x y w h = customFloating $ W.RationalRect x y w h
+    where terminalFloating x y w h = (do
+                                         hasBorder False
+                                         customFloating $ W.RationalRect x y w h
+                                     )
 
 myScratchpadManageHook = namedScratchpadManageHook scratchpads
 myManageHook = myScratchpadManageHook <+> manageDocks <+> myConditions <+> manageHook def
