fix(xmonad): enlarged tabs to fit the text

--- a/xorg/xmonad/xmonad.hs.in
+++ b/xorg/xmonad/xmonad.hs.in
@@ -149,7 +149,7 @@ tabTheme = def {
     activeTextColor      = "#c4a000",
     inactiveTextColor    = "#aaaaaa",
     urgentTextColor      = "#dd0000",
-    decoHeight           = HEIGHT
+    decoHeight           = HEIGHT_TABS
 }
 
 xpconfig = def {
