feat(starship): defined continuation prompt

--- a/homes/modules/starship/starship.toml
+++ b/homes/modules/starship/starship.toml
@@ -3,6 +3,8 @@
 scan_timeout = 10
 add_newline = false
 
+continuation_prompt = "[ ┊ ](blue)"
+
 format = '''
 $character$status([](bg:236 fg:16)${env_var.PS1_EXTRA}[](fg:236 bg:16))([](bg:236 fg:16)$git_branch$git_metrics[](fg:236 bg:16))([](bg:236 fg:16)${env_var.NIX_SHELL_NAME}[](fg:236 bg:16))([](bg:236 fg:16)$python[](fg:236 bg:16)) $username[@](0)$hostname[:](0)$directory$fill$cmd_duration$time [](241)
  [\$ ](bold blue)
