feat(xmonad): introducing session-chooser
M-S-S-<Return> spawns the terminal with session chooser which allows to
select either local shell (without tmux) or any remote host over ssh.

--- a/xorg/xmonad/xmonad.hs.in
+++ b/xorg/xmonad/xmonad.hs.in
@@ -305,7 +305,7 @@ myKeys xmproc = [
                               spawnHere "~/.xmonad/noblink.sh"
                               ),
     ("M-S-<Return>",      currentTopicAction myTopicConfig),
-    ("M-S-C-<Return>",    spawnHere "~/.xmonad/terminal.sh terminal"),
+    ("M-S-C-<Return>",    spawnHere "~/.xmonad/terminal.sh terminal session-chooser"),
     ("M-<Backspace>",     myToggle)]
     ++
     [(sc, withNthWorkspace W.greedyView n) | (sc, n) <- zip workspaceKeys [0..]]
